--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -27,7 +27,7 @@ div
           input.form-control.mr-sm-2(type='text' placeholder='Search')
           button.btn(style='color:teal;border-color:teal' type='submit') Search
       li
-        a.nav-link(href='signup.html' style='color:teal') Sign Up
+        a.nav-link(href='signup' style='color:teal') Sign Up
       li.nav-item
         a.nav-link.fa.fa-user(href='#profile' style='font-size:20px;color:teal')
       li.nav-item
@@ -105,3 +105,4 @@ center
       li.nav-item
         a.nav-link(style='color:lightgray;margin-top:20px' href='uploadPage') Upload
 br
+
