--- a/views/signup.pug
+++ b/views/signup.pug
@@ -81,8 +81,8 @@ html
             input(type='text', name='uname', placeholder='John_Doe', title='Username', autofocus='', required='')
             br
             br
-            label(for='password') Password: 
+            label(for='password') Password:
             input(type='password', name='passwrd', placeholder='Password', title='Password', autofocus='', required='')
             br
             button.subbutton(type='submit', style='margin-left:42px;margin-right:20px') Sign Up
-            a.signupb(href='homePage.html') Home
+            a.signupb(href='homePage') Home
