--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -46,7 +46,7 @@ div
                     input.form-control(type='password' placeholder='Password')
                   button.btn.btn-primary.btn-block Submit
               .modal-footer
-                a(href='signup.html') Sign Up
+                a(href='signup') Sign Up
 .kir
   h1.kir-r1 &#x1F525;Memento&#x1F525;
   h2.kir-r2 The Dankest Memes
