--- a/views/popMemes.pug
+++ b/views/popMemes.pug
@@ -28,7 +28,7 @@ html
               input.form-control.mr-sm-2(type='text', placeholder='Search')
               button.btn(style='color:teal;border-color:teal', type='submit') Search
           li
-            a.nav-link(href='signup.html', style='color:teal') Sign Up
+            a.nav-link(href='signup', style='color:teal') Sign Up
           li.nav-item
             a.nav-link.fa.fa-user(href='#profile', style='font-size:20px;color:teal')
           li.nav-item
@@ -47,7 +47,7 @@ html
                         input.form-control(type='password', placeholder='Password')
                       button.btn.btn-primary.btn-block Submit
                   .modal-footer
-                    a(href='signup.html') Sign Up
+                    a(href='signup') Sign Up
     .kir
       h1.kir-r1 Memento
       h2.kir-r2 The Dankest Memes
