--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -97,7 +97,7 @@ center
       li.nav-item
         a.nav-link(style='color:lightgray;margin-top:20px' href='homePage')
           img(src='logo.png' alt='Memento' height='42' width='42')
-        a.nav-brand(href='homePage.html')
+        a.nav-brand(href='homePage')
       li.nav-item
         a.nav-link(style='color:lightgray;margin-top:20px' href='popMemes') Popular Memes
       li.nav-item
