--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -10,15 +10,15 @@ head
   link(href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet')
   link(href='https://fonts.googleapis.com/css?family=Permanent+Marker:400' rel='stylesheet' type='text/css')
   title Memento
+body(style="background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');")
 style.
   body {
-  background-image: url('img_girl.jpg');
+  background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   }
-//
-  Creating the non-sticky horizontal navbar. Has a search bar, login button, signup button(fa-user icon), and profile button
+// Creating the non-sticky horizontal navbar. Has a search bar, login button, signup button(fa-user icon), and profile button
 div
   nav.navbar.navbar-expand-sm.justify-content-end
     ul.navbar-nav
@@ -27,7 +27,7 @@ div
           input.form-control.mr-sm-2(type='text' placeholder='Search')
           button.btn(style='color:teal;border-color:teal' type='submit') Search
       li
-        a.nav-link(href='signup' style='color:teal') Sign Up
+        a.nav-link(href='signup.html' style='color:teal') Sign Up
       li.nav-item
         a.nav-link.fa.fa-user(href='#profile' style='font-size:20px;color:teal')
       li.nav-item
@@ -46,15 +46,14 @@ div
                     input.form-control(type='password' placeholder='Password')
                   button.btn.btn-primary.btn-block Submit
               .modal-footer
-                a(href='signup') Sign Up
+                a(href='signup.html') Sign Up
 .kir
-  h1.kir-r1 &#x1F525;Memento&#x1F525;
+  h1.kir-r1 &#xF525;Memento&#xF525;
   h2.kir-r2 The Dankest Memes
 style(type='text/css').
   .kir {
   color: #d44b15;
   text-align: center;
-  background-color: black;
   font-size: 1em;
   font-family: Permanent Marker, serif;
   padding: 7em 0em 13em;
@@ -79,8 +78,7 @@ style.
   height: 700px;
   /*position: absolute;*/
   }
-//
-  Example cards/content for the homepage.
+// Example cards/content for the homepage.
 center
   img(src='https://media.giphy.com/media/Q79akITjn6yiNBDKaV/giphy.gif' alt='this slowpoke moves' width='500/')
 center
@@ -89,20 +87,18 @@ center
       h4.card-title so anyways i started blasting
     img.center(src='http://californiamemes.com/wp-content/uploads/2019/09/24-Dank-Memes-Reddit-1.jpg' alt='Flowers in Chania' width='400' height='400')
     .card-body
-//
-  Creating the vertical "sticky" navbar for with trending memes, popular memes, and popular users links, as well as a homepage link(fa-anchor icon)
+// Creating the vertical "sticky" navbar for with trending memes, popular memes, and popular users links, as well as a homepage link(fa-anchor icon)
 .col-1.vl.fixed-top
   nav.nav.flex-column
     ul.navbar-nav(style='margin-top:20px')
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='homePage')
+        a.nav-link(style='color:lightgray;margin-top:20px' href='homePage.html')
           img(src='logo.png' alt='Memento' height='42' width='42')
-        a.nav-brand(href='homePage')
+        a.nav-brand(href='homePage.html')
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='popMemes') Popular Memes
+        a.nav-link(style='color:lightgray;margin-top:20px' href='PopMemes.html') Popular Memes
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='videoPage') Video Stream
+        a.nav-link(style='color:lightgray;margin-top:20px' href='videoPage.html') Video Stream
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='uploadPage') Upload
+        a.nav-link(style='color:lightgray;margin-top:20px' href='uploadPage.html') Upload
 br
-
