--- a/views/videoPage.pug
+++ b/views/videoPage.pug
@@ -66,7 +66,7 @@ html
       nav.nav.flex-column
         ul.navbar-nav(style='margin-top:20px')
           li.nav-item
-            a.nav-brand(href='homePage.html')
+            a.nav-brand(href='homePage')
             a.nav-link(style='color:lightgray;margin-top:20px', href='homePage')
               img(src='logo.png', alt='Memento', height='42', width='42')
           li.nav-item
