--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -48,7 +48,7 @@ div
               .modal-footer
                 a(href='signup.html') Sign Up
 .kir
-  h1.kir-r1 &#xF525;Memento&#xF525;
+  h1.kir-r1 Memento
   h2.kir-r2 The Dankest Memes
 style(type='text/css').
   .kir {
