--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -27,7 +27,7 @@ div
           input.form-control.mr-sm-2(type='text' placeholder='Search')
           button.btn(style='color:teal;border-color:teal' type='submit') Search
       li
-        a.nav-link(href='signup.html' style='color:teal') Sign Up
+        a.nav-link(href='signup' style='color:teal') Sign Up
       li.nav-item
         a.nav-link.fa.fa-user(href='#profile' style='font-size:20px;color:teal')
       li.nav-item
@@ -46,7 +46,7 @@ div
                     input.form-control(type='password' placeholder='Password')
                   button.btn.btn-primary.btn-block Submit
               .modal-footer
-                a(href='signup.html') Sign Up
+                a(href='signup') Sign Up
 .kir
   h1.kir-r1 Memento
   h2.kir-r2 The Dankest Memes
@@ -92,13 +92,13 @@ center
   nav.nav.flex-column
     ul.navbar-nav(style='margin-top:20px')
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='homePage.html')
+        a.nav-link(style='color:lightgray;margin-top:20px' href='homePage')
           img(src='logo.png' alt='Memento' height='42' width='42')
-        a.nav-brand(href='homePage.html')
+        a.nav-brand(href='homePage')
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='PopMemes.html') Popular Memes
+        a.nav-link(style='color:lightgray;margin-top:20px' href='PopMemes') Popular Memes
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='videoPage.html') Video Stream
+        a.nav-link(style='color:lightgray;margin-top:20px' href='videoPage') Video Stream
       li.nav-item
-        a.nav-link(style='color:lightgray;margin-top:20px' href='uploadPage.html') Upload
+        a.nav-link(style='color:lightgray;margin-top:20px' href='uploadPage') Upload
 br
