--- a/views/popMemes.pug
+++ b/views/popMemes.pug
@@ -28,7 +28,7 @@ html
               input.form-control.mr-sm-2(type='text', placeholder='Search')
               button.btn(style='color:teal;border-color:teal', type='submit') Search
           li
-            a.nav-link(href='signup', style='color:teal') Sign Up
+            a.nav-link(href='signup.html', style='color:teal') Sign Up
           li.nav-item
             a.nav-link.fa.fa-user(href='#profile', style='font-size:20px;color:teal')
           li.nav-item
@@ -81,16 +81,116 @@ html
       }
     //
       Example cards/content for the homepage.
+
+
     br
     center
-      #cardBodyId
+      .card.bg-dark.text-white(style='width:400px')
+        center
+          h4.card-title !{title1}
+        img.center(src= !{src1} alt= !{alt1} width='400' height='400')
+        .card-body
+          center
+            button.btn.btn-success(type='button') D A N K
+    br
+    center
+      .card.bg-dark.text-white(style='width:400px')
+        center
+          h4.card-title This is me
+        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+        .card-body
+          center
+            button.btn.btn-success(type='button') D A N K
+
+    br
+    center
+      .card.bg-dark.text-white(style='width:400px')
+        center
+          h4.card-title This is me
+        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+        .card-body
+          center
+            button.btn.btn-success(type='button') D A N K
+
+    br
+    center
+      .card.bg-dark.text-white(style='width:400px')
+        center
+          h4.card-title This is me
+        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+        .card-body
+          center
+            button.btn.btn-success(type='button') D A N K
+
+    br
+    center
+      .card.bg-dark.text-white(style='width:400px')
+        center
+          h4.card-title This is me
+        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+        .card-body
+          center
+            button.btn.btn-success(type='button') D A N K
+
+    br
+    center
+      .card.bg-dark.text-white(style='width:400px')
+        center
+          h4.card-title This is me
+        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+        .card-body
+          center
+            button.btn.btn-success(type='button') D A N K
+
+      br
+      center
+        .card.bg-dark.text-white(style='width:400px')
+          center
+            h4.card-title This is me
+          img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+          .card-body
+            center
+              button.btn.btn-success(type='button') D A N K
+
+        br
+        center
+          .card.bg-dark.text-white(style='width:400px')
+            center
+              h4.card-title This is me
+            img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+            .card-body
+              center
+                button.btn.btn-success(type='button') D A N K
+
+        br
+        center
+          .card.bg-dark.text-white(style='width:400px')
+            center
+              h4.card-title This is me
+            img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+            .card-body
+              center
+                button.btn.btn-success(type='button') D A N K
+
+        br
+        center
+          .card.bg-dark.text-white(style='width:400px')
+            center
+              h4.card-title This is me
+            img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+            .card-body
+              center
+                button.btn.btn-success(type='button') D A N K
+
+
+
     //
       Creating the vertical "sticky" navbar for with trending memes, popular memes, and popular users links, as well as a homepage link(fa-anchor icon)
     .col-1.vl.fixed-top
       nav.nav.flex-column
         ul.navbar-nav(style='margin-top:20px')
           li.nav-item
-            a.nav-brand(href='homePage')
+            a.nav-brand(href='homePage.html')
             a.nav-link(style='color:lightgray;margin-top:20px', href='homePage')
               img(src='logo.png', alt='Memento', height='42', width='42')
           li.nav-item
