--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -80,7 +80,7 @@ style.
   }
 // Example cards/content for the homepage.
 center
-  img(src='https://media.giphy.com/media/Q79akITjn6yiNBDKaV/giphy.gif' alt='this slowpoke moves' width='500/')
+  img(src='https://media.giphy.com/media/Q79akITjn6yiNBDKaV/giphy.gif' alt='this slowpoke moves' width='400/' class = 'rounded')
 center
   .card.bg-dark.text-white(style='width:400px')
     center
@@ -93,7 +93,7 @@ center
     ul.navbar-nav(style='margin-top:20px')
       li.nav-item
         a.nav-link(style='color:lightgray;margin-top:20px' href='homePage')
-          img(src='logo.png' alt='Memento' height='42' width='42')
+          img(src='https://i.imgur.com/7zOYnS1.png' alt='Memento' height='42' width='42')
         a.nav-brand(href='homePage')
       li.nav-item
         a.nav-link(style='color:lightgray;margin-top:20px' href='PopMemes') Popular Memes
