--- a/views/popMemes.pug
+++ b/views/popMemes.pug
@@ -192,7 +192,7 @@ html
           li.nav-item
             a.nav-brand(href='homePage.html')
             a.nav-link(style='color:lightgray;margin-top:20px', href='homePage')
-              img(src='logo.png', alt='Memento', height='42', width='42')
+              img(src='https://i.imgur.com/7zOYnS1.png', alt='Memento', height='42', width='42')
           li.nav-item
             a.nav-link(style='color:lightgray;margin-top:20px', href='popMemes') Popular Memes
           li.nav-item
