--- a/views/popMemes.pug
+++ b/views/popMemes.pug
@@ -82,22 +82,53 @@ html
     //
       Example cards/content for the homepage.
 
+      - var src1 = ''
+      - var alt1 = ''
 
+      - var src2 = ''
+      - var alt2 = ''
+
+      - var src3 = ''
+      - var alt3 = ''
+
+      - var src4 = ''
+      - var alt4 = ''
+
+      - var src5 = ''
+      - var alt5 = ''
+
+      - var src6 = ''
+      - var alt6 = ''
+
+      - var src7 = ''
+      - var alt7 = ''
+
+      - var src8 = ''
+      - var alt8 = ''
+
+      - var src9 = ''
+      - var alt9 = ''
+
+      - var src0 = ''
+      - var alt0 = ''
+
+
+
+    br
+    center
+      .card.bg-dark.text-white(style='width:400px')
+        center
+          h4.card-title !{title0}
+        img.center(src=src0 alt=alt0 width='400' height='400')
+        .card-body
+          center
+            button.btn.btn-success(type='button') D A N K
     br
     center
       .card.bg-dark.text-white(style='width:400px')
         center
           h4.card-title !{title1}
-        img.center(src= !{src1} alt= !{alt1} width='400' height='400')
-        .card-body
-          center
-            button.btn.btn-success(type='button') D A N K
-    br
-    center
-      .card.bg-dark.text-white(style='width:400px')
-        center
-          h4.card-title This is me
-        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+        img.center(src=src1 alt=alt1 width='400' height='400')
         .card-body
           center
             button.btn.btn-success(type='button') D A N K
@@ -106,8 +137,8 @@ html
     center
       .card.bg-dark.text-white(style='width:400px')
         center
-          h4.card-title This is me
-        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+          h4.card-title !{title2}
+        img.center(src=src2 alt=alt2 width='400' height='400')
         .card-body
           center
             button.btn.btn-success(type='button') D A N K
@@ -116,8 +147,8 @@ html
     center
       .card.bg-dark.text-white(style='width:400px')
         center
-          h4.card-title This is me
-        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+          h4.card-title !{title3}
+        img.center(src=src3 alt=alt3 width='400' height='400')
         .card-body
           center
             button.btn.btn-success(type='button') D A N K
@@ -126,8 +157,8 @@ html
     center
       .card.bg-dark.text-white(style='width:400px')
         center
-          h4.card-title This is me
-        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+          h4.card-title !{title4}
+        img.center(src=src4 alt=alt4 width='400' height='400')
         .card-body
           center
             button.btn.btn-success(type='button') D A N K
@@ -136,8 +167,8 @@ html
     center
       .card.bg-dark.text-white(style='width:400px')
         center
-          h4.card-title This is me
-        img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+          h4.card-title !{title5}
+        img.center(src=src1 alt=alt1 width='400' height='400')
         .card-body
           center
             button.btn.btn-success(type='button') D A N K
@@ -146,8 +177,8 @@ html
       center
         .card.bg-dark.text-white(style='width:400px')
           center
-            h4.card-title This is me
-          img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+            h4.card-title !{title6}
+          img.center(src=src6 alt=alt6 width='400' height='400')
           .card-body
             center
               button.btn.btn-success(type='button') D A N K
@@ -156,8 +187,8 @@ html
         center
           .card.bg-dark.text-white(style='width:400px')
             center
-              h4.card-title This is me
-            img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+              h4.card-title !{title7}
+            img.center(src=src7 alt=alt7 width='400' height='400')
             .card-body
               center
                 button.btn.btn-success(type='button') D A N K
@@ -166,18 +197,18 @@ html
         center
           .card.bg-dark.text-white(style='width:400px')
             center
-              h4.card-title This is me
-            img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+              h4.card-title !{title8}
+            img.center(src=src8 alt=alt8 width='400' height='400')
             .card-body
               center
-                button.btn.btn-success(type='button') D A N K
+                button.btn.btn-success(type='button') D A N K 
 
         br
         center
           .card.bg-dark.text-white(style='width:400px')
             center
-              h4.card-title This is me
-            img.center(src='https://piximus.net/media2/48518/fresh-dank-memes-to-offend-and-amuse-you-2.jpg' alt='Flowers in Chania' width='400' height='400')
+              h4.card-title !{title9}
+            img.center(src=src9 alt=alt9 width='400' height='400')
             .card-body
               center
                 button.btn.btn-success(type='button') D A N K
@@ -192,7 +223,7 @@ html
           li.nav-item
             a.nav-brand(href='homePage.html')
             a.nav-link(style='color:lightgray;margin-top:20px', href='homePage')
-              img(src='https://i.imgur.com/7zOYnS1.png', alt='Memento', height='42', width='42')
+              img(src='logo.png', alt='Memento', height='42', width='42')
           li.nav-item
             a.nav-link(style='color:lightgray;margin-top:20px', href='popMemes') Popular Memes
           li.nav-item
