--- a/views/popMemes.pug
+++ b/views/popMemes.pug
@@ -1,251 +1,13 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js')
-    script(src='https://kit.fontawesome.com/a076d05399.js')
-    link(href='https://fonts.googleapis.com/css?family=Permanent+Marker:400', rel='stylesheet', type='text/css')
-    title Memento
-  body(style="background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');")
-    style.
-      body {
-      background-image: url('img_girl.jpg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-      }
-    //
-      Creating the non-sticky horizontal navbar. Has a search bar, login button, signup button(fa-user icon), and profile button
-    div
-      nav.navbar.navbar-expand-sm.justify-content-end
-        ul.navbar-nav
-          li.nav-item
-            form.form-inline(method='GET', name='searchbar', style='margin-right:30px')
-              input.form-control.mr-sm-2(type='text', placeholder='Search')
-              button.btn(style='color:teal;border-color:teal', type='submit') Search
-          li
-            a.nav-link(href='signup.html', style='color:teal') Sign Up
-          li.nav-item
-            a.nav-link.fa.fa-user(href='#profile', style='font-size:20px;color:teal')
-          li.nav-item
-            button.btn.btn-bg-black(type='button', style='color:teal', data-toggle='modal', data-target='#popUpWindow') Login
-            #popUpWindow.modal.fade
-              .modal-dialog
-                .modal-content.border-2.border-light(style='background-color:black')
-                  .modal-header
-                    h3.modal-title(style='color:white;') Log In
-                    button.close(type='button', data-dismiss='modal', style='color:white') ×
-                  .modal-body
-                    form(role='form')
-                      .form-group
-                        input.form-control(type='email', placeholder='Email')
-                      .form-group
-                        input.form-control(type='password', placeholder='Password')
-                      button.btn.btn-primary.btn-block Submit
-                  .modal-footer
-                    a(href='signup') Sign Up
-    .kir
-      h1.kir-r1 Memento
-      h2.kir-r2 The Dankest Memes
-    style(type='text/css').
-      .kir {
-      color: #d44b15;
-      text-align: center;
-      font-size: 1em;
-      font-family: Permanent Marker, serif;
-      padding: 7em 0em 13em;
-      }
-      .kir-r1 {
-      line-height: 1em;
-      text-align: center;
-      font-size: 10em;
-      font-weight: 100;
-      color: #fff;
-      }
-      .kir-r2 {
-      line-height: 1em;
-      margin-top: -2em;
-      font-size: 5.5em;
-      }
-    style.
-      .vl {
-      border-right: 2px solid lightgrey;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      height: 700px;
-      /*position: absolute;*/
-      }
-    //
-      Example cards/content for the homepage.
+button.btn.btn-success(onclick='updateValueByNumBounded(1)') D A N K
+        span#changeNumberBounded 0
 
-      - var src1 = ''
-      - var alt1 = ''
-
-      - var src2 = ''
-      - var alt2 = ''
-
-      - var src3 = ''
-      - var alt3 = ''
-
-      - var src4 = ''
-      - var alt4 = ''
-
-      - var src5 = ''
-      - var alt5 = ''
-
-      - var src6 = ''
-      - var alt6 = ''
-
-      - var src7 = ''
-      - var alt7 = ''
-
-      - var src8 = ''
-      - var alt8 = ''
-
-      - var src9 = ''
-      - var alt9 = ''
-
-      - var src0 = ''
-      - var alt0 = ''
-
-
-
-    br
-    center
-      .card.bg-dark.text-white(style='width:400px')
-        center
-          h4.card-title !{title0}
-        img.center(src=src0 alt=alt0 width='400' height='400')
-        .card-body
-          center
-            button.btn.btn-success(type='button') D A N K
-    br
-    center
-      .card.bg-dark.text-white(style='width:400px')
-        center
-          h4.card-title !{title1}
-        img.center(src=src1 alt=alt1 width='400' height='400')
-        .card-body
-          center
-            button.btn.btn-success(type='button') D A N K
-
-    br
-    center
-      .card.bg-dark.text-white(style='width:400px')
-        center
-          h4.card-title !{title2}
-        img.center(src=src2 alt=alt2 width='400' height='400')
-        .card-body
-          center
-            button.btn.btn-success(type='button') D A N K
-
-    br
-    center
-      .card.bg-dark.text-white(style='width:400px')
-        center
-          h4.card-title !{title3}
-        img.center(src=src3 alt=alt3 width='400' height='400')
-        .card-body
-          center
-            button.btn.btn-success(type='button') D A N K
-
-    br
-    center
-      .card.bg-dark.text-white(style='width:400px')
-        center
-          h4.card-title !{title4}
-        img.center(src=src4 alt=alt4 width='400' height='400')
-        .card-body
-          center
-            button.btn.btn-success(type='button') D A N K
-
-    br
-    center
-      .card.bg-dark.text-white(style='width:400px')
-        center
-          h4.card-title !{title5}
-        img.center(src=src1 alt=alt1 width='400' height='400')
-        .card-body
-          center
-            button.btn.btn-success(type='button') D A N K
-
-      br
-      center
-        .card.bg-dark.text-white(style='width:400px')
-          center
-            h4.card-title !{title6}
-          img.center(src=src6 alt=alt6 width='400' height='400')
-          .card-body
-            center
-              button.btn.btn-success(type='button') D A N K
-
-        br
-        center
-          .card.bg-dark.text-white(style='width:400px')
-            center
-              h4.card-title !{title7}
-            img.center(src=src7 alt=alt7 width='400' height='400')
-            .card-body
-              center
-                button.btn.btn-success(type='button') D A N K
-
-        br
-        center
-          .card.bg-dark.text-white(style='width:400px')
-            center
-              h4.card-title !{title8}
-            img.center(src=src8 alt=alt8 width='400' height='400')
-            .card-body
-              center
-                button.btn.btn-success(type='button') D A N K 
-
-        br
-        center
-          .card.bg-dark.text-white(style='width:400px')
-            center
-              h4.card-title !{title9}
-            img.center(src=src9 alt=alt9 width='400' height='400')
-            .card-body
-              center
-                button.btn.btn-success(type='button') D A N K
-
-
-
-    //
-      Creating the vertical "sticky" navbar for with trending memes, popular memes, and popular users links, as well as a homepage link(fa-anchor icon)
-    .col-1.vl.fixed-top
-      nav.nav.flex-column
-        ul.navbar-nav(style='margin-top:20px')
-          li.nav-item
-            a.nav-brand(href='homePage.html')
-            a.nav-link(style='color:lightgray;margin-top:20px', href='homePage')
-              img(src='https://i.imgur.com/7zOYnS1.png', alt='Memento', height='42', width='42')
-          li.nav-item
-            a.nav-link(style='color:lightgray;margin-top:20px', href='popMemes') Popular Memes
-          li.nav-item
-            a.nav-link(style='color:lightgray;margin-top:20px', href='videoPage') Video Stream
-          li.nav-item
-            a.nav-link(style='color:lightgray;margin-top:20px', href='uploadPage') Upload
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
+        script.
+          function updateValueByNumBounded(changeBy){
+          var number = document.getElementById("changeNumberBounded").innerHTML;
+          number= parseInt(number) + changeBy;
+          if(number > 1)
+          {
+          number = 1;
+          }
+          document.getElementById("changeNumberBounded").innerHTML = number;
+          }
