--- a/views/homePage.pug
+++ b/views/homePage.pug
@@ -23,7 +23,7 @@ div
   nav.navbar.navbar-expand-sm.justify-content-end
     ul.navbar-nav
       li.nav-item
-        form.form-inline(method='GET' name='searchbar' style='margin-right:30px')
+        form.form-inline(action='/search' method='GET' name='searchbar' style='margin-right:30px')
           input.form-control.mr-sm-2(type='text' placeholder='Search')
           button.btn(style='color:teal;border-color:teal' type='submit') Search
       li
